; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/FreeRTOS/Source/portable/GCC/ARM_CM3/extr_port.c_xPortSysTickHandler.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/FreeRTOS/Source/portable/GCC/ARM_CM3/extr_port.c_xPortSysTickHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pdFALSE = common dso_local global i64 0, align 8
@portNVIC_PENDSVSET_BIT = common dso_local global i32 0, align 4
@portNVIC_INT_CTRL_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xPortSysTickHandler() #0 {
  %1 = call i32 (...) @portDISABLE_INTERRUPTS()
  %2 = call i64 (...) @xTaskIncrementTick()
  %3 = load i64, i64* @pdFALSE, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @portNVIC_PENDSVSET_BIT, align 4
  store i32 %6, i32* @portNVIC_INT_CTRL_REG, align 4
  br label %7

7:                                                ; preds = %5, %0
  %8 = call i32 (...) @portENABLE_INTERRUPTS()
  ret void
}

declare dso_local i32 @portDISABLE_INTERRUPTS(...) #1

declare dso_local i64 @xTaskIncrementTick(...) #1

declare dso_local i32 @portENABLE_INTERRUPTS(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
